--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "technical-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Juaness98.github.io/test-front",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -21,6 +20,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.1.3",
+    "react-redux": "^8.0.5",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,8 +32,6 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,9 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "axios": "^1.3.3",
-    "react-redux": "^8.0.5"
   }
 }
